Added subtitle and description to personal website.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html> <!-- Version of HTML we're using -->
 <html lang="en" dir="ltr">
-  <head> <!-- Holds info about the webpage, and tells browser how to handle
+
+<head>
+  <!-- Holds info about the webpage, and tells browser how to handle
   the page -->
-    <meta charset="utf-8"> <!-- Characterset: meta elements
+  <meta charset="utf-8">
+  <!-- Characterset: meta elements
     give extra associated (meta) data to our HTML documents
     all the text inside this webpage is using UTF-8 encoding system!
     UTF-8 is the standard encoding for HTML5
    -->
-    <title>💫 Chloe's Personal Site!</title> <!-- Title of the page -->
-  </head>
-  <body>
-    <h1>Chloe Zhao</h1>
-    <p>
+  <title>💫 Chloe's Personal Site!</title> <!-- Title of the page -->
+</head>
 
-    </p>
-  </body>
+<body>
+  <h1>Chloe Zhao</h1>
+  <p>
+    <em>Avid Student Programmer</em> <!--em actually emphasizes the content
+      within the tags, and <i></i> actually only styles the content
+      between the tags to make it look slanted. -->
+  </p>
+  <p>
+    A third year student studying Computer Science and English
+    at <strong> University of Toronto St. George. I love to draw digital
+    art and write in my free time! </strong>
+  </p>
+
+</body>
+
 </html>
