Fixed an accidental bolding of the hobby sentence.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </p>
   <p>
     A third year student studying Computer Science and English
-    at <strong> University of Toronto St. George. I love to draw digital
-    art and write in my free time! </strong>
+    at <strong> University of Toronto St. George.</strong> I love to draw digital
+    art and write in my free time!
   </p>
 
 </body>
