Added education and hobbies section.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
   <h1>Chloe Zhao</h1>
   <p>
-    <em>Avid Student Programmer</em> <!--em actually emphasizes the content
+    <em>Avid Student Programmer</em>
+    <!--em actually emphasizes the content
       within the tags, and <i></i> actually only styles the content
       between the tags to make it look slanted. -->
   </p>
@@ -26,6 +27,37 @@
     art and write in my free time!
   </p>
 
+  <hr />
+
+  <h3>Education</h3>
+    <ul>
+      <li>
+        Henderson Avenue Public School (Grade 4 to 8) - <em>Gifted Program</em>
+      </li>
+      <li>
+        St. Robert Catholic High School (Grade 9 to 12) - <em>International
+        Baccalaureate Program</em>
+      </li>
+      <li>
+        University of Toronto St. George - <em>Specialist in Computer Science and Minor in English</em>
+      </li>
+    </ul>
+
+    <h3>My Hobbies</h3>
+    <ol>
+      <li>
+        Digital Art and Graphic Design
+      </li>
+      <li>
+        Reading
+      </li>
+      <li>
+        Watching anime and reading manga
+      </li>
+      <li>
+        Playing games
+      </li>
+    </ol>
 </body>
 
 </html>
