Added an image into the personal website.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <img src="wei_ying.jpg" alt="Wei Ying" width="300" height="239">
   <h1>Chloe Zhao</h1>
   <p>
     <em>Avid Student Programmer</em>
