Moved images into its own folder and added new page to my website.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <img src="wei_ying.jpg" alt="Wei Ying" width="300" height="239">
+  <img src="Images/wei_ying.jpg" alt="Wei Ying" width="300" height="239">
   <h1>Chloe Zhao</h1>
   <p>
     <em>Avid Student Programmer</em>
@@ -25,7 +25,7 @@
   <p>
     A third year student studying Computer Science and English
     at <strong> University of Toronto St. George.</strong> I love to draw digital
-    art and write in my free time!
+    art and write in my free time! This is my <strong><a href="https://yichenesia.carrd.co/">resume.</a></strong>
   </p>
 
   <hr />
@@ -44,21 +44,7 @@
       </li>
     </ul>
 
-    <h3>My Hobbies</h3>
-    <ol>
-      <li>
-        Digital Art and Graphic Design
-      </li>
-      <li>
-        Reading
-      </li>
-      <li>
-        Watching anime and reading manga
-      </li>
-      <li>
-        Playing games
-      </li>
-    </ol>
+    <a href="hobbies.html">My Hobbies</a>
 </body>
 
 </html>
