Added contact me page.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,38 @@
         University of Toronto St. George - <em>Specialist in Computer Science and Minor in English</em>
       </li>
     </ul>
+  
+    <h3>Work Experience</h3>
+    <p>2010-2013 Lead Developer at Google</p>
+    <p>2010 Researcher at UofT</p>
+    <table>
+      <thead>
+        <tr>
+          <th>Year</th>
+          <th>Position</th>
+        </tr>
+      </thead>
+      
+      <tbody>
+        <tr>
+          <td>2010-2013</td>
+          <td>Lead Developer at Google</td>
+        </tr>
+        <tr>
+          <td>2010</td>
+          <td>Researcher at UofT</td>
+        </tr>
+      </tbody>
 
-    <a href="hobbies.html">My Hobbies</a>
+      <tfoot></tfoot>
+
+    </table>
+
+    <hr />
+    
+    <p><a href="hobbies.html">My Hobbies</a></p>
+    <p><a href="contact.html">Contact Me</a></p>
+   
 </body>
 
 </html>
