Added skills section

--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
 </head>
 
 <body>
-  <img src="Images/wei_ying.jpg" alt="Wei Ying" width="300" height="239">
-  <h1>Chloe Zhao</h1>
-  <p>
-    <em>Avid Student Programmer</em>
-    <!--em actually emphasizes the content
-      within the tags, and <i></i> actually only styles the content
-      between the tags to make it look slanted. -->
-  </p>
-  <p>
-    A third year student studying Computer Science and English
-    at <strong> University of Toronto St. George.</strong> I love to draw digital
-    art and write in my free time! This is my <strong><a href="https://yichenesia.carrd.co/">resume.</a></strong>
-  </p>
+
+  <table>
+    <tr>
+      <td><img src="Images/wei_ying.jpg" alt="Wei Ying" width="300" height="239"></td>
+      <td><h1>Chloe Zhao</h1>
+        <p>
+          <em>Avid Student Programmer</em>
+          <!--em actually emphasizes the content
+            within the tags, and <i></i> actually only styles the content
+            between the tags to make it look slanted. -->
+        </p>
+        <p>
+          A third year student studying Computer Science and English
+          at <strong> University of Toronto St. George.</strong> I love to draw digital
+          art and write in my free time! This is my <strong><a href="https://yichenesia.carrd.co/">resume.</a></strong>
+        </p></td>
+    </tr>
+  </table>
 
   <hr />
 
@@ -45,9 +50,7 @@
     </ul>
   
     <h3>Work Experience</h3>
-    <p>2010-2013 Lead Developer at Google</p>
-    <p>2010 Researcher at UofT</p>
-    <table>
+    <table border="1">
       <thead>
         <tr>
           <th>Year</th>
@@ -70,8 +73,30 @@
 
     </table>
 
+    <h3>Skills</h3>
+
+    <table border="1">
+      <thead></thead>
+      <tbody>
+        <tr>
+          <td>Android Development</td>
+          <td>&#11088; &#11088; &#11088;</td>
+          <td>Full-Stack Development</td>
+          <td>&#11088; &#11088; &#11088; &#11088;</td>
+        </tr>
+        <tr>
+          <td>Graphic Design</td>
+          <td>&#11088; &#11088; &#11088; &#11088;</td>
+          <td>Data Structures and Algorithms</td>
+          <td>&#11088; &#11088; &#11088;</td>
+        </tr>
+      </tbody>
+      <tfoot></tfoot>
+
+    </table>
+
     <hr />
-    
+
     <p><a href="hobbies.html">My Hobbies</a></p>
     <p><a href="contact.html">Contact Me</a></p>
    
