Added send a message functionality at Contact page

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,18 @@
     </head>
     <body>
         <h1>Contact Me</h1>
-        <p>My Fictional Address</p>
+        <p>27 King's College Circle, Toronto, ON M5S</p>
         <p>Telephone: 1234567890</p>
-        <p>myemail@gmail.com</p>
+        <p>yichenesia@gmail.com</p>
     </body>
+
+    <form action="mailto:yichenesia@gmail.com" method="POST" enctype="text/plain">
+        <label>Your Name: </label>
+        <input type="text" name="yourName" value="">  <br>
+        <label>Your Email: </label>
+        <input type="email" name="yourEmail"> <br>
+        <label>Your Message: </label> <br>
+        <textarea name="yourMessage" rows="10" cols="30"></textarea> <br>
+        <input type="submit" value="Submit">
+    </form>
 </html>
