--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
         University of Toronto St. George - <em>Specialist in Computer Science and Minor in English</em>
       </li>
     </ul>
-  
+    
+    <hr>
+
     <h3>Work Experience</h3>
-    <table border="1">
+    <table cellspacing="10">
       <thead>
         <tr>
           <th>Year</th>
@@ -73,26 +75,40 @@
 
     </table>
 
+    <hr>
+
     <h3>Skills</h3>
 
-    <table border="1">
-      <thead></thead>
-      <tbody>
-        <tr>
-          <td>Android Development</td>
-          <td>&#11088; &#11088; &#11088;</td>
-          <td>Full-Stack Development</td>
-          <td>&#11088; &#11088; &#11088; &#11088;</td>
-        </tr>
-        <tr>
-          <td>Graphic Design</td>
-          <td>&#11088; &#11088; &#11088; &#11088;</td>
-          <td>Data Structures and Algorithms</td>
-          <td>&#11088; &#11088; &#11088;</td>
-        </tr>
-      </tbody>
-      <tfoot></tfoot>
+    <table>
+      <tr>
+        <td>
+          <table cellspacing="10">
+            <thead></thead>
+            <tbody>
+              <tr>
+                <td>Android Development</td>
+                <td>&#11088; &#11088; &#11088;</td>
+              </tr>
+              <tr>
+                <td>Full-Stack Development</td>
+                <td>&#11088; &#11088; &#11088; &#11088;</td>
+              </tr>
+              <tr>
+                <td>Data Structures and Algorithms</td>
+                <td>&#11088; &#11088; &#11088;</td>
+              </tr>
+              <tr>
+                <td>Graphic Design</td>
+                <td>&#11088; &#11088; &#11088; &#11088;</td>
+              </tr>
+            </tbody>
+            <tfoot></tfoot>
+      
+          </table>
 
+        </td>
+
+      </tr>
     </table>
 
     <hr />
