Finished simple HTML site

--- a/index.html
+++ b/index.html
@@ -11,22 +11,7 @@
     UTF-8 is the standard encoding for HTML5
    -->
   <title>💫 Chloe's Personal Site!</title> <!-- Title of the page -->
-
-  <style>
-    body {
-      background-color: #ffed99;
-    }
-
-    hr {
-      border-style: none;
-      border-top-style: dotted;
-      border-color: #f6b8b8;
-      border-width: 10px;
-      width: 7%;
-    }
-
-  </style>
-
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -34,7 +19,7 @@
 
   <table>
     <tr>
-      <td><img src="Images/wei_ying.jpg" alt="Wei Ying" width="300" height="239"></td>
+      <td><img class="circular" src="Images/wei_ying.jpg" alt="Wei Ying" width="300" height="239"></td>
       <td><h1>Chloe Zhao</h1>
         <p>
           <em>Avid Student Programmer</em>
